--- a/style.css
+++ b/style.css
@@ -3,3 +3,29 @@ body {
   height: 100%;
   margin: 0;
 }
+header {
+  text-align: center;
+}
+img {
+  display: block;
+  margin-left: auto; 
+  margin-right: auto;
+}
+a {
+  padding-left: 10px;
+  padding-right: 10px;
+  align-items: center;
+  background-color: gray;
+}
+figcaption {
+  font-size: smaller;
+  text-align: center;
+}
+#featured-property > p {
+  width: 800px;
+  margin: 10px auto;
+  text-align: center;
+}
+div {
+  float: left;
+}
